[gd_scene load_steps=36 format=3 uid="uid://cojvglro8fr60"]

[ext_resource type="Script" uid="uid://c4sskw3sldb6b" path="res://enemies/scenes/enemy_character.gd" id="1_xr0iu"]
[ext_resource type="Script" uid="uid://fuogjxe1gr3j" path="res://enemies/scripts/ai_movement_manager.gd" id="2_f82ev"]
[ext_resource type="Script" uid="uid://d4lsp6fkml3h3" path="res://player/scripts/stamina_manager.gd" id="3_3m3xd"]
[ext_resource type="Script" uid="uid://cecsid1iml5j8" path="res://player/weapon_manager.gd" id="4_7l5qy"]
[ext_resource type="Script" uid="uid://wl6u80irlrwi" path="res://system/scripts/health_blockable.gd" id="5_ccmh4"]
[ext_resource type="Script" uid="uid://cqfvtidss3haf" path="res://system/scripts/action_manager.gd" id="6_46ogm"]
[ext_resource type="Script" uid="uid://b2ibvmfs8hbrl" path="res://system/scripts/action.gd" id="7_yu6hv"]
[ext_resource type="Script" uid="uid://8jmn5lsekfpw" path="res://system/scripts/action_leap_attack.gd" id="8_xr0iu"]
[ext_resource type="Script" uid="uid://c3j4mokeedbn2" path="res://system/scripts/action_engage.gd" id="10_syxwh"]
[ext_resource type="Script" uid="uid://x3x62q3np3qf" path="res://system/scripts/action_keep_distance.gd" id="11_ikmv6"]
[ext_resource type="Script" uid="uid://bjtmtlxcwwpmd" path="res://system/scripts/action_dash.gd" id="12_nsivp"]
[ext_resource type="Script" uid="uid://b6sa48cxaul1x" path="res://system/scripts/action_sprint.gd" id="13_yv28p"]
[ext_resource type="Script" uid="uid://bagpr4ssytwj0" path="res://enemies/scripts/ai_action_controller.gd" id="15_6s50l"]
[ext_resource type="Script" uid="uid://bcnftja1gi4hk" path="res://vfx/scripts/splatter_on_hit.gd" id="16_j67on"]
[ext_resource type="Texture2D" uid="uid://b0viems8r1p13" path="res://vfx/textures/smoke_medium.png" id="17_xrve6"]
[ext_resource type="Script" uid="uid://btk656i61o72l" path="res://system/scripts/character_sound_manager.gd" id="18_erq5g"]
[ext_resource type="AudioStream" uid="uid://cpbl0hysjsp1t" path="res://sfx/footsteps/footsteps-001.wav" id="19_0auc1"]
[ext_resource type="AudioStream" uid="uid://i2v43f48ivts" path="res://sfx/footsteps/footsteps-002.wav" id="20_4waaa"]
[ext_resource type="AudioStream" uid="uid://dxtrxm7rb6wi1" path="res://sfx/footsteps/footsteps-003.wav" id="21_ghn7i"]
[ext_resource type="AudioStream" uid="uid://bgupddqt4qcyb" path="res://sfx/footsteps/footsteps-004.wav" id="22_886en"]
[ext_resource type="AudioStream" uid="uid://db7x6fc4ukeu4" path="res://sfx/footsteps/footsteps-005.wav" id="23_4j3m2"]
[ext_resource type="AudioStream" uid="uid://b00ubnovfat3x" path="res://sfx/footsteps/jump-land.wav" id="24_fdqm6"]
[ext_resource type="Script" uid="uid://cgleucta3iiqc" path="res://weapons/scripts/weapon.gd" id="26_3m3xd"]
[ext_resource type="PackedScene" uid="uid://8dlndv72ysbq" path="res://enemies/models/rat_model.tscn" id="26_f82ev"]

[sub_resource type="Resource" id="Resource_f82ev"]
script = ExtResource("8_xr0iu")
distance_threshhold = 5.0
leap_vel = Vector3(0, 1, 15)
leap_duration = 0.4
action_name = "attack"
action_type = 1
cancellable = false
stamina_cost = 0
sustained_stamina_cost = 0
metadata/_custom_type_script = "uid://8jmn5lsekfpw"

[sub_resource type="Resource" id="Resource_3agdk"]
script = ExtResource("10_syxwh")
distance = 3.0
move_speed = 5.0
action_name = "engage"
action_type = 0
cancellable = true
stamina_cost = 0
sustained_stamina_cost = 0
metadata/_custom_type_script = "uid://c3j4mokeedbn2"

[sub_resource type="Resource" id="Resource_6x60x"]
script = ExtResource("11_ikmv6")
distance = 6.0
move_speed = 4.0
action_name = "keep_distance"
action_type = 0
cancellable = true
stamina_cost = 0
sustained_stamina_cost = 0
metadata/_custom_type_script = "uid://x3x62q3np3qf"

[sub_resource type="Resource" id="Resource_ly86r"]
script = ExtResource("12_nsivp")
action_name = "dash"
action_type = 0
cancellable = true
stamina_cost = 20
sustained_stamina_cost = 0
metadata/_custom_type_script = "uid://bjtmtlxcwwpmd"

[sub_resource type="Resource" id="Resource_n0bl4"]
script = ExtResource("13_yv28p")
action_name = "sprint"
action_type = 0
cancellable = true
stamina_cost = 0
sustained_stamina_cost = 0
metadata/_custom_type_script = "uid://b6sa48cxaul1x"

[sub_resource type="SphereShape3D" id="SphereShape3D_st66r"]
radius = 8.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wodsf"]
streams_count = 5
stream_0/stream = ExtResource("19_0auc1")
stream_1/stream = ExtResource("20_4waaa")
stream_2/stream = ExtResource("21_ghn7i")
stream_3/stream = ExtResource("22_886en")
stream_4/stream = ExtResource("23_4j3m2")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oul6g"]
radius = 0.452405
height = 1.46801

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_g1dw6"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Movement:velocity_sync")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="ViewportTexture" id="ViewportTexture_kuufe"]
viewport_path = NodePath("Sprite3D/SubViewport")

[sub_resource type="SphereShape3D" id="SphereShape3D_f82ev"]

[node name="EnemyRat" type="CharacterBody3D" node_paths=PackedStringArray("ai_action_controller", "action_manager", "weapon_manager", "health", "movement_manager", "stamina") groups=["character"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_xr0iu")
ai_action_controller = NodePath("AIActionController")
action_manager = NodePath("ActionManager")
weapon_manager = NodePath("WeaponManager")
health = NodePath("Health")
movement_manager = NodePath("Movement")
stamina = NodePath("Stamina")

[node name="Movement" type="Node" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("2_f82ev")
body = NodePath("..")

[node name="Stamina" type="Node" parent="."]
script = ExtResource("3_3m3xd")
max_stamina = 1e+12

[node name="WeaponManager" type="Node" parent="." node_paths=PackedStringArray("weapon", "character_model")]
script = ExtResource("4_7l5qy")
weapon = NodePath("../BespokeWeapon")
character_model = NodePath("../rat")

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("weapon_manager")]
script = ExtResource("5_ccmh4")
weapon_manager = NodePath("../WeaponManager")
max_health = 55.0
metadata/_custom_type_script = "uid://cj5ml78376k0s"

[node name="ActionManager" type="Node" parent="."]
script = ExtResource("6_46ogm")
action_set = Array[ExtResource("7_yu6hv")]([SubResource("Resource_f82ev"), SubResource("Resource_3agdk"), SubResource("Resource_6x60x"), SubResource("Resource_ly86r"), SubResource("Resource_n0bl4")])

[node name="AIActionController" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("15_6s50l")
profficiency = 0.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="AIActionController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09491, 0)
shape = SubResource("SphereShape3D_st66r")

[node name="SplatterOnHit" type="Node3D" parent="." node_paths=PackedStringArray("health")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.863035, 0)
script = ExtResource("16_j67on")
health = NodePath("../Health")
texture = ExtResource("17_xrve6")
modulate = Color(0.545098, 0.0862745, 0, 1)
metadata/_custom_type_script = "uid://bcnftja1gi4hk"

[node name="AudioManager" type="Node3D" parent="." node_paths=PackedStringArray("skeleton_controller", "weapon_manager")]
script = ExtResource("18_erq5g")
skeleton_controller = NodePath("../rat")
weapon_manager = NodePath("../WeaponManager")

[node name="FootstepAudio" type="AudioStreamPlayer3D" parent="AudioManager"]
stream = SubResource("AudioStreamRandomizer_wodsf")
max_distance = 20.0

[node name="ImpactAudio" type="AudioStreamPlayer3D" parent="AudioManager"]
stream = ExtResource("24_fdqm6")
volume_db = -1.0
max_distance = 25.0

[node name="rat" parent="." node_paths=PackedStringArray("movement_manager", "weapon_manager") instance=ExtResource("26_f82ev")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
movement_manager = NodePath("../Movement")
weapon_manager = NodePath("../WeaponManager")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.419823, -0.177284)
shape = SubResource("CapsuleShape3D_oul6g")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_g1dw6")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.31525, 0)
layers = 2
billboard = 1
texture = SubResource("ViewportTexture_kuufe")

[node name="SubViewport" type="SubViewport" parent="Sprite3D"]
transparent_bg = true
size = Vector2i(300, 300)

[node name="HealthBar" type="ProgressBar" parent="Sprite3D/SubViewport"]
modulate = Color(0.803922, 0, 0.117647, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -13.5
offset_right = 50.0
offset_bottom = -2.94501
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="StaminaBar" type="ProgressBar" parent="Sprite3D/SubViewport"]
modulate = Color(0.765429, 0.487928, 7.70092e-07, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -1.09
offset_right = 50.0
offset_bottom = 6.14
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="ActionsList" type="Label" parent="Sprite3D/SubViewport"]
offset_left = 100.45
offset_top = 154.81
offset_right = 177.36
offset_bottom = 177.81
theme_override_font_sizes/font_size = 10
text = "GAGEGAw"

[node name="BespokeWeapon" type="Node3D" parent="." node_paths=PackedStringArray("hitbox")]
script = ExtResource("26_3m3xd")
damage = 20
overhead_damage = 20
lunge_speed_mult = 1.0
is_bespoke = true
hitbox = NodePath("../Weaponhitbox")

[node name="Weaponhitbox" type="Area3D" parent="."]
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Weaponhitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.501325, -0.948443)
shape = SubResource("SphereShape3D_f82ev")
